# gravitytadpoles

./: .envrc  .gitignore  Makefile  README.md  flake.nix  pyproject.toml
src/: ball.py  main.py
