[project]
name = "gravitytadpoles"
version = "0.1.0"
description = ""
authors = [
    {name = "Subeen Regmi",email = "subeenregmi123@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pyright]
venv = '.'
